# kakship

./: .gitignore  Cargo.toml  default.nix  flake.nix  shell.nix
rc/: kakship.kak
src/: error.rs  main.rs
